# shred

./: CHANGELOG.md  README.md  shred.cabal
lib/: MyLib.hs
